# Thesis-Documentation

./: README.md  install.sh
Archive/: README.md
Archive/Documentation/: README.md
Archive/Journal/: Notes_collected_during_the_work_mainly_UWB.md  Notes_for_software.md
Archive/Papers/: README.md
Data for Indoor Positioning System (GUI)/: README.md
Data for Indoor Positioning System (GUI)/Test - Experiment 113/: UWB_timestamps.txt
Data for Indoor Positioning System (GUI)/Test - Experiment 118/: UWB_timestamps.txt
Data for Indoor Positioning System (GUI)/Test - Experiment 124/: UWB_timestamps.txt  video_timestamps.txt
Data for Indoor Positioning System (GUI)/Train - Experiment 109/: UWB_timestamps.txt  video_timestamps.txt
Implementation/: README.md  install.sh  install_old.sh
Implementation/Camera Intrinsic Calibration (Optical)/: README.md  intrinsic_parameters_to_be_used_in_GUI.xml
Implementation/Camera Intrinsic Calibration (Optical)/Calibrator/: CMakeLists.txt  Calibrator.cpp  Calibrator.h  Camera.cpp  Camera.h  main.cpp
Implementation/ESP32 UWB/: README.md
Implementation/IndoorPositioningSystem/: CMakeLists.txt  README.md  anchorinputwindow.cpp  main.cpp  (+32 more)
Implementation/Server/: CMakeLists.txt  Camera.cpp  Camera.h  README.md  Server.cpp  Server.h  Server_Multithreaded.cpp  SharedData.h  VideoManager.cpp  VideoManager.h
PixelToReal, Optical and UWB evaluation/: README.md
Recorded Experiments/: README.md
Wiki/: Camera-Intrinsic-Calibration.md  Indoor-Positioning-System-(GUI).md  Multithreaded-Server.md  wiki_main.md  xGBoost-Training.md
(+449 files in other folders)
